# roguehostapd

./: PUBLISH_GUIDE.md  README.md  cleanup_interface.py  pyproject.toml  setup.py
.github/workflows/: python-test.yml
roguehostapd/: apctrl.py  run.py
roguehostapd/buildutil/: build_files.py  buildcommon.py
roguehostapd/config/: config.ini  hostapdconfig.py
roguehostapd/hostapd-2_11/hostapd/: config_file.c
roguehostapd/hostapd-2_11/src/ap/: ap_config.h  hostapd.c  hostapd.h  ieee802_11.c
roguehostapd/hostapd-2_11/src/crypto/: tls_openssl.c
roguehostapd/hostapd-2_11/src/wps/: wps_registrar.c
