[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roguehostapd"
version = "1.2.0"
description = "Hostapd wrapper for hostapd with improved Python 3.13+ support"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["hostapd", "wifi", "access-point", "karma"]
authors = [
  {name = "idenroad"},
  {name = "Anakin"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/idenroad/roguehostapd"
Repository = "https://github.com/idenroad/roguehostapd"

[tool.setuptools]
packages = ["roguehostapd", "roguehostapd.config", "roguehostapd.buildutil", "examples"]

[tool.setuptools.package-data]
roguehostapd = ["config/hostapd.conf", "config/config.ini"]
